# hotmart-python

./: .env.example  .flake8  .gitignore  HANDOFF.md  HOTMART_API.md  LICENSE.txt  MANIFEST.in  README.md  __main__.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: checks.yml  publish.yml
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  task_completion_steps.md
docs/: CHANGELOG.md  CONTRIBUTING-ptBR.md  CONTRIBUTING.md  HOTMART-API-BUGS.md  MIGRATION.md  README-ptBR.md  README.md  SANDBOX-GUIDE.md
docs/superpowers/specs/: 2026-03-25-hotmart-sdk-rework-design.md
examples/: main.py
hotmart/: hotmart.py
hotmart_python/: __init__.py  decorators.py  hotmart.py
src/hotmart/: __init__.py  _auth.py  _base_client.py  _client.py  _config.py  _exceptions.py  _logging.py  _rate_limit.py  _retry.py
src/hotmart/models/: __init__.py  _common.py  _enums.py  club.py  coupons.py  events.py  negotiation.py  pagination.py  products.py  sales.py  subscriptions.py
src/hotmart/resources/: _base.py  club.py  coupons.py  events.py  negotiation.py  products.py  sales.py  subscriptions.py
tests/: conftest.py  test_auth.py  test_client.py  test_coupons.py  test_decorators.py  test_exceptions.py  test_helpers.py  test_integration.py  test_logging.py  test_rate_limit.py  test_retry.py  test_sales.py  test_subscriptions.py
tests/resources/: test_club.py  test_coupons.py  test_events.py  test_negotiation.py  test_products.py  test_sales.py  test_subscriptions.py
